# IA_Oraculo

./: 02_aula.py  03_aula.py  04_aula.py  05_aula.py  06_aula.py  07_aula.py  README.md  app.py  loaders.py  main.py  pyproject.toml
